--- a/code-test/HandleString/Jenkinsfile
+++ b/code-test/HandleString/Jenkinsfile
@@ -22,36 +22,26 @@ pipeline {
         stage('Deploy') {
             steps {
                 echo 'Starting Deploy...'
-                // 1.使用scp
-                sh '''
-                    scp -o StrictHostKeyChecking=no code-test/HandleString/target/*.jar deployer@192.168.0.41:/root/app/
-                    ssh -o StrictHostKeyChecking=no deployer@192.168.0.41 '
-                                    cd /root/app &&
-                                    chmod +x ExecScript.sh &&
-                                    ./ExecScript.sh
-                                '
-                '''
-
-//                 // 2.使用Publish Over SSH
-//                 sshPublisher(
-//                     publishers: [
-//                         sshPublisherDesc(
-//                             configName: '192.168.0.41-项目服务器',
-//                             transfers: [
-//                                 sshTransfer(
-//                                     sourceFiles: '**/HandleString*.jar',
-//                                     removePrefix: 'code-test/HandleString/target',
-//                                     remoteDirectory: '',
-//                                     execCommand: '''
-//                                                     cd /root/app &&
-//                                                     chmod +x ExecScript.sh &&
-//                                                     ./ExecScript.sh
-//                                                  '''
-//                                 )
-//                             ]
-//                         )
-//                     ]
-//                 )
+                // 2.使用Publish Over SSH
+                sshPublisher(
+                    publishers: [
+                        sshPublisherDesc(
+                            configName: '192.168.0.41-项目服务器',
+                            transfers: [
+                                sshTransfer(
+                                    sourceFiles: '**/HandleString*.jar',
+                                    removePrefix: 'code-test/HandleString/target',
+                                    remoteDirectory: '',
+                                    execCommand: '''
+                                                    cd /root/app &&
+                                                    chmod +x ExecScript.sh &&
+                                                    ./ExecScript.sh
+                                                 '''
+                                )
+                            ]
+                        )
+                    ]
+                )
                 echo 'Deploy Successful!!!'
             }
         }
