--- a/code-test/HandleString/Dockerfile
+++ b/code-test/HandleString/Dockerfile
@@ -1,8 +1,14 @@
-# 使用带 JDK 21 和 Maven 3.9.9 的镜像
-FROM maven:3.9.9-eclipse-temurin-21
+FROM maven:3.9.9-eclipse-temurin-21 AS builder
 WORKDIR /app
 COPY pom.xml .
+# 先下载依赖
+RUN mvn dependency:go-offline -B
 COPY src ./src
 RUN mvn clean package -DskipTests && cp target/HandleString-*.jar app.jar
+
+# 运行阶段
+FROM eclipse-temurin:21-jre-alpine
+WORKDIR /app
+COPY --from=builder /app/app.jar .
 EXPOSE 8080
 ENTRYPOINT ["java", "-jar", "app.jar"]
