--- a/code-test/HandleString/Jenkinsfile
+++ b/code-test/HandleString/Jenkinsfile
@@ -38,8 +38,11 @@ pipeline {
         stage('Build Docker Image') {
             steps {
                 script {
+                    // 推荐：先定义镜像名称变量，避免内联 GString 作为参数直接传入
+                    def fullImageName = "${IMAGE_NAME}:${IMAGE_TAG}"
+
                     docker.build(
-                      "${IMAGE_NAME}:${IMAGE_TAG}",
+                      fullImageName,
                       "--build-arg BUILD_DATE=${currentBuild.timeInMillis}",
                       "./code-test/HandleString"
                     )
