更新了Jenkins配置文件--构建Docker 镜像

--- a/code-test/HandleString/Jenkinsfile
+++ b/code-test/HandleString/Jenkinsfile
@@ -43,8 +43,7 @@ pipeline {
 
                     docker.build(
                       fullImageName,
-                      "--build-arg BUILD_DATE=${currentBuild.timeInMillis}",
-                      "./code-test/HandleString"
+                      "--build-arg BUILD_DATE=${currentBuild.timeInMillis} ./code-test/HandleString"
                     )
                 }
             }
