--- a/code-test/HandleString/Jenkinsfile
+++ b/code-test/HandleString/Jenkinsfile
@@ -1,5 +1,10 @@
 pipeline {
-    agent any
+    agent {
+        docker {
+            image 'bitnami/kubectl:latest'  // 运行环境带 kubectl
+            args '-u root:root'  // 需要 root 权限时可用
+        }
+    }
 
     environment {
         // Harbor 配置
