更新了Jenkins配置文件--部署K8S

--- a/code-test/HandleString/Jenkinsfile
+++ b/code-test/HandleString/Jenkinsfile
@@ -72,7 +72,7 @@ pipeline {
                     // 使用 kubeconfig 操作 K8S
                     withKubeConfig(credentialsId: KUBECONFIG_CRED_ID, serverUrl: "https://192.168.0.50:6443") {
                         sh """
-                            sh "kubectl get namespace ${NAMESPACE} || kubectl create namespace ${NAMESPACE}"
+                            kubectl get namespace ${NAMESPACE} || kubectl create namespace ${NAMESPACE}
                             kubectl apply -f Deployment.yaml -n ${NAMESPACE}
                             kubectl rollout status deployment/handlestring-deployment -n ${NAMESPACE} --timeout=60s
                         """
