更新了Deployment.yaml、application.yml-启用了探针跟配置k8s探针

--- a/code-test/HandleString/src/main/resources/application.yml
+++ b/code-test/HandleString/src/main/resources/application.yml
@@ -5,4 +5,8 @@ management:
   endpoints:
     web:
       exposure:
-        include: "*"
+        include: health,info
+  endpoint:
+    health:
+      probes:
+        enabled: true
