--- a/code-test/HandleString/Deployment.yaml
+++ b/code-test/HandleString/Deployment.yaml
@@ -26,18 +26,20 @@ spec:
             limits:
               memory: "1Gi"
               cpu: "500m"
-#          livenessProbe:
-#            httpGet:
-#              path: /actuator/health
-#              port: 8080
-#            initialDelaySeconds: 90
-#            periodSeconds: 10
-#          readinessProbe:
-#            httpGet:
-#              path: /actuator/health
-#              port: 8080
-#            initialDelaySeconds: 60
-#            periodSeconds: 10
+          livenessProbe:
+            httpGet:
+              path: /actuator/health/liveness
+              port: 8080
+            initialDelaySeconds: 120    # 应用启动预热时间
+            periodSeconds: 10          # 探测周期
+            failureThreshold: 5        # 连续失败次数后重启容器
+          readinessProbe:
+            httpGet:
+              path: /actuator/health/readiness
+              port: 8080
+            initialDelaySeconds: 60
+            periodSeconds: 10
+            failureThreshold: 5
 ---
 apiVersion: v1
 kind: Service
