--- a/code-test/HandleString/Deployment.yaml
+++ b/code-test/HandleString/Deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: handlestring
-          image: 192.168.0.47:80/wordpress/handlestring:1.0
+          image: 192.168.0.47:80/wordpress/handlestring:latest
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 8080
