--- a/code-test/HandleString/Jenkinsfile
+++ b/code-test/HandleString/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
         HARBOR_REGISTRY = "192.168.0.47"
         HARBOR_PROJECT = "wordpress"
         IMAGE_NAME = "${HARBOR_REGISTRY}/${HARBOR_PROJECT}/handlestring"
-        IMAGE_TAG = "1.0"
+        IMAGE_TAG = "latest"
 
         // K8S 配置
         KUBECONFIG_CRED_ID = "kubeconfig"  // Jenkins 凭据 ID（类型：Secret File）
