修改Jenkinsfile中 tools增加了git

--- a/code-test/HandleString/Jenkinsfile
+++ b/code-test/HandleString/Jenkinsfile
@@ -16,6 +16,7 @@ pipeline {
     tools {
         maven 'Maven'  // 需要与Jenkins全局配置的中Maven的名称一致
         jdk 'JDK21'  // 需要与Jenkins全局配置的中JDK的名称一致
+        git 'Git' // 需要与Jenkins全局配置的中Git的名称一致
     }
 
     stages {
