--- a/code-test/HandleString/Deployment.yaml
+++ b/code-test/HandleString/Deployment.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
         - name: handlestring
           image: 192.168.0.47:80/wordpress/handlestring:__IMAGE_TAG__
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           ports:
             - containerPort: 8080
           resources:
