新增Deployment-hpa.yaml

--- a/code-test/HandleString/Jenkinsfile
+++ b/code-test/HandleString/Jenkinsfile
@@ -82,6 +82,9 @@ pipeline {
                             # -f -：这里的 - 很重要，表示 从标准输入读取配置文件，而不是从磁盘文件读取
                             sed "s#__IMAGE_TAG__#${IMAGE_TAG}#g" code-test/HandleString/Deployment.yaml | kubectl apply -n ${NAMESPACE} -f -
 
+                            # 【新增】部署 HPA 配置文件 Deployment-hpa.yaml 看自己需要
+                            kubectl apply -n ${NAMESPACE} -f code-test/HandleString/Deployment-hpa.yaml
+
                             # 等待滚动更新完成
                             kubectl rollout status deployment/handlestring-deployment -n ${NAMESPACE} --timeout=300s
                         """
