--- a/code-test/HandleString/Jenkinsfile
+++ b/code-test/HandleString/Jenkinsfile
@@ -82,8 +82,11 @@ pipeline {
                             # -f -：这里的 - 很重要，表示 从标准输入读取配置文件，而不是从磁盘文件读取
                             sed "s#__IMAGE_TAG__#${IMAGE_TAG}#g" code-test/HandleString/Deployment.yaml | kubectl apply -n ${NAMESPACE} -f -
 
-                            ## 【新增】部署 HPA 配置文件 Deployment-hpa.yaml 看自己需要，一般都不在这里执行（因为很少变动，管理员自己执行即可）
-                            #kubectl apply -n ${NAMESPACE} -f code-test/HandleString/Deployment-hpa.yaml
+                            # 【新增】部署 HPA 配置文件 Deployment-hpa.yaml 看自己需要，一般都不在这里执行（因为很少变动，管理员自己执行即可）
+                            kubectl apply -n ${NAMESPACE} -f code-test/HandleString/Deployment-hpa.yaml
+
+                            # 【新增】部署 Ingress 配置文件 Deployment-ingress.yaml 看自己需要，一般都不在这里执行（因为很少变动，管理员自己执行即可）
+                            kubectl apply -n ${NAMESPACE} -f code-test/HandleString/Deployment-ingress.yaml
 
                             # 等待滚动更新完成
                             kubectl rollout status deployment/handlestring-deployment -n ${NAMESPACE} --timeout=300s
